fix: overflow between instructions and amount input field on Mobile

--- a/packages/p2p/src/components/buy-sell/buy-sell-modal.scss
+++ b/packages/p2p/src/components/buy-sell/buy-sell-modal.scss
@@ -21,10 +21,6 @@
             > .dc-input {
                 margin-top: 1rem; // Compensate for label.
             }
-
-            &--no-flex {
-                display: block;
-            }
         }
     }
 }
